[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=3]
[ext_resource path="res://Menus/resources/btn_texture2.png" type="Texture" id=5]
[ext_resource path="res://new_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Menus/resources/Header_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sfx/menus/btn_hvr.wav" type="AudioStream" id=8]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="panel" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -331.181
margin_top = -185.926
margin_right = 317.819
margin_bottom = 256.074
rect_min_size = Vector2( 0, 30 )
rect_clip_content = true
size_flags_vertical = 0
custom_constants/separation = 50
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="VBoxContainer"]
margin_right = 649.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
rect_clip_content = true
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.84
margin_top = -48.7018
margin_right = 259.16
margin_bottom = 41.2982
custom_fonts/font = ExtResource( 6 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 649.0
margin_bottom = 195.0
rect_min_size = Vector2( 0, 70 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.01
margin_top = -47.0316
margin_right = 274.99
margin_bottom = 40.9684
custom_fonts/font = ExtResource( 6 )
text = "Host Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="TextureButton" parent="VBoxContainer"]
margin_top = 245.0
margin_right = 649.0
margin_bottom = 315.0
rect_min_size = Vector2( 0, 70 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button3"]
anchor_left = 0.5
anchor_top = 0.457
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.521
margin_top = -44.0216
margin_right = 141.479
margin_bottom = 40.9684
custom_fonts/font = ExtResource( 6 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="store" type="TextureButton" parent="VBoxContainer"]
margin_top = 365.0
margin_right = 649.0
margin_bottom = 435.0
rect_min_size = Vector2( 0, 70 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/store"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.6702
margin_top = -48.7018
margin_right = 96.3298
margin_bottom = 39.2982
custom_fonts/font = ExtResource( 6 )
text = "Store"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -196.5
margin_right = 196.5
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
text = "WarZone II"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="btn_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="finished" from="btn_click" to="." method="_on_btn_click_finished"]
